feat: add Phecda project scan API
